--- a/index2.html
+++ b/index2.html
@@ -3,13 +3,13 @@
   <head>
     <title>Calculation</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="lib/mathquill-0.9.4/mathquill.css" type="text/css"/>
     <link rel="stylesheet" href="styles.css" type="text/css"/>
+    <link rel="stylesheet" href="lib/mathquill-dev/mathquill.css" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <script type="text/javascript" src="lib/jquery-1.7.1-min.js"></script>
-    <script type="text/javascript" src="lib/mathquill-0.9.4/mathquill.js"></script>
-    <script type="text/javascript" src="bundle.js"></script>
+    <script type="text/javascript" src="lib/mathquill-dev/mathquill.js"></script>
+    <script type="text/javascript" src="bundle2.js"></script>
   </body>
 </html>
