--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="lib/mathquill-0.9.4/mathquill.css" type="text/css"/>
     <link rel="stylesheet" href="styles.css" type="text/css"/>
+    <link rel="stylesheet" href="lib/bootstrap-3.3.4-dist/css/glyphs.css" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
